# earnings-pillar-diff

./: AGENTS.md  Makefile  PRODUCT_BRIEF.md  README.md  STATUS.md  SYSTEM_MAP.md  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
docs/: first-pr.md  product-brief.md  system-map.md
earnings_diff/: MSFT-2025Q4.md
earnings_pillar_diff/: __init__.py  __main__.py  cli.py  model.py  scoring.py
reports/: MSFT-2025Q4.jsonl
schemas/: memo.schema.json
scripts/: check_pillar_references.py  validate_memo_schema.py  voice_lint.py
specs/0001-foundation/: acceptance.md  design.md  requirements.md  tasks.md
specs/0002-design/: acceptance.md  design.md  ledger.md  requirements.md  tasks.md
src/epd/: __init__.py  cli.py
tests/: test_cli.py  test_scoring.py  test_validators.py
tests/fixtures/pillar_repo/thesis/: chip-cowos-2027.md
